# Syzygy

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
docs/: ADVERSARIAL-API.md  ARCHITECTURE.md  DESIGN.md  DEVELOPMENT.md  END-GOAL-PLAN.md  GOOGLE-DRIVE.md  LAN-MCP.md  MCP.md  PLUGIN-API.md  PROVIDER-API.md  RESEARCH-EXTENSIONS.md  ROADMAP.md  UNATTENDED-GOAL-FRAMEWORK.md
docs/audits/: CAPABILITIES.json  DATA-FLOW.md  EDITOR-PROVENANCE.md  EXTENSION-PROVENANCE.md  LITERATURE-NOTES-2026-07-15.md  README.md  THREAT-MODEL.md
docs/audits/DECISIONS/: ADR-0001-DRIVE-WORKSPACE-AUTH.md  ADR-0002-REMOTE-MODEL-BOUNDARY.md  ADR-0003-RESEARCH-PLUGIN-AUTHORITY.md
docs/audits/runs/: ADVERSARIAL-BATCH-AUTHORIZATION-2026-07-15.json  ADVERSARIAL-BATCH-RESERVATION-2026-07-15.json  ADVERSARIAL-RECORD-2026-07-15.json  ADVERSARIAL-RUNNER-2026-07-15.json  ADVERSARIAL-SCHEMA-2026-07-15.json  ANTHROPIC-REQUEST-CONFORMANCE-2026-07-15.json  COLLABORATION-ENTRY-UX-2026-07-17.json  CREDENTIAL-VAULT-WINDOWS-2026-07-15.json  DRIVE-LIVE-2026-07-14.json  DRIVE-PROJECT-DISCOVERY-DIAGNOSTICS-2026-07-17.json  DRIVE-PROJECT-TRANSPORT-2026-07-16.json  DRIVE-PROJECT-TWO-INSTALL-DIAGNOSIS-2026-07-17.json  DRIVE-WRITE-LIVE-2026-07-14.json  EDITOR-STRUCTURE-2026-07-16.json  MCP-LIVE-2026-07-14.json  (+46 more)
docs/schemas/: syzygy-adversarial-run-v1.schema.json  syzygy-model-adapter-certification-v1.schema.json  syzygy-model-adapter-v1.schema.json  syzygy-plugin-certification-v1.schema.json  syzygy-plugin-proposal-v1.schema.json  syzygy-provider-run-v1.schema.json  syzygy-research-plugin-v1.schema.json
docs/templates/: GOAL-SUPERVISOR-PROMPT.md  UNATTENDED-GOAL.md
docs/wit/: syzygy-research-plugin-v1.wit
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  a11y.css  automationBridge.ts  automationCapabilities.test.ts  automationCapabilities.ts  brand-tokens.css  crashReports.test.ts  crashReports.ts  driveContext.test.ts  driveContext.ts  driveEdits.test.ts  driveEdits.ts  expertIcons.ts  generators.test.ts  generators.ts  intent.test.ts  intent.ts  json.test.ts  json.ts  localAi.test.ts  localAi.ts  localAi.ui.test.ts  log.test.ts  log.ts  main.tsx  migrations.test.ts  migrations.ts  models.test.ts  models.ts  seed.ts  storage.test.ts  storage.ts  store.ts  styles.css  tauri.ts  types.ts  ui-polish.css  uiIcons.ts  util.ts  visionModels.ts
frontend/src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json  tauri.release.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/installer/: English.nsh
frontend/src-tauri/src/: automation.rs  credential_vault.rs  documents.rs  downloads.rs  drive_projects.rs  engine.rs  google_auth.rs  google_drive.rs  knowledge.rs  lan_agent.rs  lan_dev_coordinator.rs  lan_runtime.rs  lib.rs  main.rs  mcp.rs  mcp_setup.rs  model_provider.rs  platform_contracts.rs  provider_runtime.rs  provider_stream.rs  state.rs  updates.rs  vision.rs
scripts/: audit.mjs  bump.mjs  fetch-engine.mjs  fetch-engine.ps1  generate-brand-assets.ps1  goal-framework.test.mjs  lan-agent-supervisor.mjs  lan-agent-supervisor.test.mjs  lan-bridge-protocol.mjs  lan-bridge.test.mjs  lan-dev-mode.test.mjs  lan-drive-live-harness.mjs  lan-local-mcp.mjs  lan-mcp-agent.mjs  lan-mcp-attach.mjs  lan-mcp-coordinator.mjs  lan-mcp-fixture.mjs  lan-mcp-harness.mjs  lan-mcp-host.mjs  lan-packaged-agent-harness.mjs  lan-pairing-key.mjs  mcp-harness.mjs  mcp-live-harness.mjs  model-adapter-certifier.mjs  model-adapter-certifier.test.mjs  plugin-certifier.mjs  plugin-certifier.test.mjs  provider-runtime-interop.mjs  run-with-heartbeat.mjs  run-with-heartbeat.test.mjs  supervised-build.mjs  supervised-build.test.mjs
(+141 files in other folders)
