[package]
name = "app"
version = "0.1.16"
description = "Syzygy local-first collaborative research workspace"
authors = ["Penumbra"]
license = "MIT"
repository = "https://github.com/penpro/Syzygy"
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-upload = "2"
tauri-plugin-dialog = "2"
pdf-extract = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "multipart"] }
futures-util = "0.3"
base64 = "0.22"
tauri-plugin-process = "2"
# Google OAuth (loopback + PKCE): S256 challenge, CSPRNG verifier/state, safe URL building
sha2 = "0.10"
aes-gcm = "0.10"
hkdf = "0.12"
hmac = "0.12"
getrandom = "0.2"
url = "2"
# Drive folder sync: RFC3339 timestamps + setting local file mtimes to match Drive
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
filetime = "0.2"
zeroize = "1.8.1"

# Windows-only — DXGI VRAM detection (used under #[cfg(windows)]); not built on macOS/Linux.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Graphics_Dxgi", "Win32_Foundation"] }
keyring = { version = "=3.6.3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "=3.6.3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "=3.6.3", default-features = false, features = ["linux-native-sync-persistent", "crypto-rust"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
# Parser-only test dependency. 0.223.1 keeps the repository's Rust 1.77.2 floor.
wit-parser = "=0.223.1"
